--- a/OOP/객체지향이란 무엇인가.md
+++ b/OOP/객체지향이란 무엇인가.md
@@ -50,6 +50,7 @@
 [[객체지향이 지향하는 바 (4가지 특성 , 5원칙의 목표)]]
 
 ## 객체지향의 4대 특성
+[[객체지향의 4대 특성]]
 특성은 객체들 각각의 특성을 나타낸다. 각각의 특성들은 어떤 목적으로 지켜져야 할 규칙인지에 집중해보자 . 
 
 ### [[캡슐화]]
@@ -89,9 +90,10 @@ A라는 사람의 정보
 =="목적에 따라서, 정보를 단순화하여서 모델링하는 기법"==
 ### [[다형성]]
 #### 사용 편의성 
-
 다형성은 오버로딩과 오버라이딩과 관련이 있다. 
 	참고 : 오버로딩이 다형성인지는 이견이 있다. 
+
+ 물론 상위 클래스와 하위 클래스 사이에서도 다형성을 이야기 할 수  있고, 인터페이스와 그것의 구현 클래스 사이에서도 다형성을 이야기 할 수 있지만 가장 기본은 오버라이딩과 오버로딩이라고 할 수 있다. 
 
 ## 객체지향의 5원칙 (SOLID)
 
